--- a/springboot-backend/src/main/resources/application.properties
+++ b/springboot-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/customer_management_system
+spring.datasource.url= "YOUR DB PATH"
 spring.datasource.username=root
-spring.datasource.password=Mysql@123
+spring.datasource.password="PASSWORD"
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
